refactored search flight & hotel commands to contain the filtering logic removed parameters from the repo functions added integration test restructured the folders of testing project

--- a/HolidaySearchUnitTests/HolidaySearchTests.csproj
+++ b/HolidaySearchUnitTests/HolidaySearchTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,6 +8,20 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="TestData\flights.json" />
+    <None Remove="TestData\hotels.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="TestData\flights.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestData\hotels.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
